--- a/_layout/header.html
+++ b/_layout/header.html
@@ -2,7 +2,7 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/_wiki/">Posts</a></li>
+            <li><a href="/wikis/">Posts</a></li>
             <li>
                 <input type="text" placeholder="Search..." disabled />
             </li>
