feature: add generate-documents.js
Related to: #9

--- a/_layout/layout.html
+++ b/_layout/layout.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <title>{{title}}</title>
+    {{#if use_math}}
+    <script>
+        window.MathJax = {
+            tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] },
+            svg: { fontCache: 'global' }
+        };
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" async></script>
+    {{/if}}
 </head>
+
 <body>
     {{header}}
+
     <main>
+        <section class="page-header">
+            <h1>{{title}}</h1>
+            <div class="page-meta">
+                Last modified: {{lastmod}}
+                <a href="{{history_url}}" target="_blank">View History</a>
+            </div>
+        </section>
+
+        {{#if table_of_contents}}
         <nav class="table-of-contents">
-            <h2>목차</h2>
+            <h2>Table of Contents</h2>
             <ul>
                 {{table_of_contents}}
             </ul>
         </nav>
+        {{/if}}
 
         <article>
             {{content}}
-            <p class="lastmod">마지막 수정: {{lastmod}}</p>
         </article>
-
-        {{#if child_links}}
-        <section class="child-docs">
-            <h2>하위 문서 목록</h2>
-            <ul>
-                {{#each child_links}}
-                <li><a href="{{url}}">{{title}}</a></li>
-                {{/each}}
-            </ul>
-        </section>
-        {{/if}}
     </main>
+
     {{footer}}
 </body>
+
 </html>
