--- a/_layout/footer.html
+++ b/_layout/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <nav>
         <ul>
-            <li><a href="https://github.com/sikutisa" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/sikutisa" target="_blank" rel="noopener noreferrer">GitHub</a></li>
             <li><a href="/about">About</a></li>
         </ul>
     </nav>
