--- a/_layout/index.html
+++ b/_layout/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>전체 문서 목록</title>
 </head>
 <body>
