--- a/_layout/main.html
+++ b/_layout/main.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>메인 페이지</title>
 </head>
 <body>
