--- a/_layout/footer.html
+++ b/_layout/footer.html
@@ -1,8 +1,10 @@
-<footer>
-    <nav>
-        <ul>
-            <li><a href="https://github.com/sikutisa" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-            <li><a href="/about">About</a></li>
-        </ul>
-    </nav>
+<footer class="site-footer">
+    <div class="container">
+        <nav class="footer-nav">
+            <div class="footer-links">
+                <a href="https://github.com/sikutisa" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="/about">About</a>
+            </div>
+        </nav>
+    </div>
 </footer>
