--- a/_layout/header.html
+++ b/_layout/header.html
@@ -1,11 +1,13 @@
-<header>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/wikis/">Wikis</a></li>
-            <li>
+<header class="site-header">
+    <div class="container">
+        <nav class="site-nav">
+            <div class="nav-links">
+                <a class="site-brand" href="/">Home</a>
+                <a href="/wikis/">Wikis</a>
+            </div>
+            <div class="nav-search">
                 <input type="text" placeholder="Search..." disabled />
-            </li>
-        </ul>
-    </nav>
+            </div>
+        </nav>
+    </div>
 </header>
