--- a/_layout/layout.html
+++ b/_layout/layout.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="{{base_url}}/assets/style/base.css">
+    <link rel="stylesheet" href="{{base_url}}/assets/style/layout.css">
+    <link rel="stylesheet" href="{{base_url}}/assets/style/components.css">
+    <link rel="stylesheet" href="{{base_url}}/assets/style/pages/document.css">
     {{#if use_math}}
     <script>
         window.MathJax = {
@@ -19,7 +23,7 @@
 <body>
     {{header}}
 
-    <main>
+    <main class="container">
         <section class="page-header">
             <h1>{{title}}</h1>
             <div class="page-meta">
