--- a/_layout/index.html
+++ b/_layout/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>전체 문서 목록</title>
+    <title>wikis</title>
     <link rel="stylesheet" href="{{base_url}}/assets/style/base.css">
     <link rel="stylesheet" href="{{base_url}}/assets/style/layout.css">
     <link rel="stylesheet" href="{{base_url}}/assets/style/components.css">
@@ -13,7 +13,7 @@
     {{header}}
     <main class="container">
         <section>
-            <h1 class="index-title">전체 문서 목록</h1>
+            <h1 class="index-title">wikis</h1>
 
             <div class="page-meta">
                 Last updated: {{last_updated}}
