--- a/_layout/main.html
+++ b/_layout/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>메인 페이지</title>
+    <title>Home</title>
     <link rel="stylesheet" href="{{base_url}}/assets/style/base.css">
     <link rel="stylesheet" href="{{base_url}}/assets/style/layout.css">
     <link rel="stylesheet" href="{{base_url}}/assets/style/components.css">
@@ -13,7 +13,7 @@
     {{header}}
     <main class="container">
         <section>
-            <h1 class="main-title">최근 수정된 문서</h1>
+            <h1 class="main-title">Home</h1>
             <ul class="recent-docs">
                 {{#each recent_docs}}
                 <li>
